# control_system_backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: main_router.py  swagger.py
app/core/config/: __init__.py  auth.py  base.py  config.py  db.py  swagger.py
app/core/exc/: handlers.py
app/core/exc/base/: __init__.py  exceptions.py
app/enums/: __init__.py  base.py  exceptions.py  opc_server.py  user.py
app/infra/database/: __init__.py  db.py
app/infra/database/alembic/: env.py  script.py.mako
app/infra/database/alembic/versions/: 00001_initial.py
app/models/: __init__.py  base.py  opc_server.py  organization.py  user.py
app/repositories/: base.py
app/schemas/: base.py
app/uow/: base.py  sql.py
app/utils/: token_manager.py
scripts/: app-start.sh
